# 2018.10.Rplidar_PCL

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.save  README.md  launch_from_companion_intel_up.launch  launch_mavros_rplidar_ekf_from_computer.launch  launch_raw_mavros.launch  lidar_driver.cpp  lidar_pcl.files  lidar_pcl.includes  main.cpp  mavros_companion.launch  mavros_rplidar_ekf.files  mavros_rplidar_ekf.includes  mavros_rplidar_pcl.creator.user.6bd81ce  mavros_rplidar_pcl.files  mavros_rplidar_pcl.includes  mavros_rplidar_pid.files  mavros_rplidar_pid.includes  package.xml
cmake_submodules/: CMake_iir.txt  CMake_integration_f.txt
include/: config.h  registration_abs.hpp
references/matlab/: intfcn_f.m  intfcn_main.m  iomega_mex.mexa64  lib_iomega.prj  sliding_integrate_f.m  sliding_integrate_main.m  sliding_intergate_f.m.backup  sliding_intergate_f.m~
references/matlab/codegen/lib/iomega/: buildInfo.mat  codeInfo.mat  detrend.c  detrend.h  fft.c  fft.h  gcGuiReport.mat  ifft.c  ifft.h  ifftshift.c  ifftshift.h  iomega.c  iomega.h  iomega_data.c  iomega_data.h  iomega_emxutil.c  iomega_emxutil.h  iomega_initialize.c  iomega_initialize.h  iomega_rtw.mk  iomega_rtwutil.c  iomega_rtwutil.h  iomega_terminate.c  iomega_terminate.h  iomega_types.h  ixamax.c  ixamax.h  mldivide.c  mldivide.h  polyfit.c  polyfit.h  polyval.c  polyval.h  qrsolve.c  qrsolve.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  (+24 more)
references/matlab/codegen/lib/iomega/examples/: main.c  main.h
references/matlab/codegen/lib/iomega/html/: detrend_c.html  detrend_h.html  exported_values.mat  fft_c.html  fft_h.html  ifft_c.html  ifft_h.html  ifftshift_c.html  ifftshift_h.html  index.html  iomega280_mcode.html  iomega_buildlog1.html  iomega_buildlog2.html  iomega_buildlog3.html  iomega_c.html  iomega_data_c.html  iomega_data_h.html  iomega_emxutil_c.html  iomega_emxutil_h.html  iomega_h.html  iomega_initialize_c.html  iomega_initialize_h.html  iomega_rtwutil_c.html  iomega_rtwutil_h.html  iomega_terminate_c.html  iomega_terminate_h.html  iomega_types_h.html  ixamax_c.html  ixamax_h.html  main_c.html  main_h.html  metrics.html  mldivide_c.html  mldivide_h.html  polyfit_c.html  polyfit_h.html  polyval_c.html  polyval_h.html  qrsolve_c.html  qrsolve_h.html  (+30 more)
references/matlab/codegen/lib/iomega/interface/: _coder_iomega_api.c  _coder_iomega_api.h  _coder_iomega_info.c  _coder_iomega_info.h  _coder_iomega_mex.c  _coder_iomega_mex.h
references/matlab/codegen/lib/sliding_integration_f/: buildInfo.mat  codeInfo.mat  detrend.c  detrend.h  fft.c  fft.h  ifft.c  ifft.h  ifftshift.c  ifftshift.h  iomega.c  iomega.h  ixamax.c  ixamax.h  mldivide.c  mldivide.h  polyfit.c  polyfit.h  polyval.c  polyval.h  qrsolve.c  qrsolve.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  sliding_integrate_f.c  sliding_integrate_f.h  sliding_integration_f_data.c  sliding_integration_f_data.h  sliding_integration_f_emxutil.c  sliding_integration_f_emxutil.h  sliding_integration_f_initialize.c  sliding_integration_f_initialize.h  sliding_integration_f_rtw.mk  (+23 more)
references/matlab/codegen/lib/sliding_integration_f/examples/: main.c  main.h
references/matlab/codegen/lib/sliding_integration_f/html/: detrend_c.html  detrend_h.html  exported_values.mat  fft_c.html  fft_h.html  ifft_c.html  ifft_h.html  ifftshift_c.html  ifftshift_h.html  index.html  iomega1_mcode.html  iomega1_watch.html  iomega_buildlog1.html  iomega_buildlog2.html  iomega_c.html  iomega_h.html  ixamax_c.html  ixamax_h.html  main_c.html  main_h.html  metrics.html  mldivide_c.html  mldivide_h.html  polyfit_c.html  polyfit_h.html  polyval_c.html  polyval_h.html  qrsolve_c.html  qrsolve_h.html  rtGetInf_c.html  rtGetInf_h.html  rtGetNaN_c.html  rtGetNaN_h.html  rt_defines_h.html  rt_nonfinite_c.html  rt_nonfinite_h.html  rtwtypes_h.html  sliding_integrate_f_c.html  sliding_integrate_f_h.html  sliding_integration_f_data_c.html  (+28 more)
references/matlab/codegen/lib/sliding_integration_f/interface/: _coder_sliding_integration_f_api.c  _coder_sliding_integration_f_api.h  _coder_sliding_integration_f_info.c  _coder_sliding_integration_f_info.h  _coder_sliding_integration_f_mex.c  _coder_sliding_integration_f_mex.h
references/matlab/codegen/mex/iomega_mex/: cfiGuiReport.mat  iomega_mex.mexa64
references/matlab/codegen/mex/iomega_mex/html/: exported_values.mat  index.html  iomega1_mcode.html  iomega1_watch.html  iomega296_mcode.html  sliding_integrate_f248_mcode.html  sliding_integrate_f248_watch.html
references/matlab/dataset/: acc_dataset_1_20Hz.txt  acc_dataset_2_20Hz.txt  acc_dataset_3_100Hz.txt  acc_dataset_4_100Hz.txt  acc_dataset_5_100Hz.txt
src/: kalman_fusion.cpp  lidar_driver.cpp  main.cpp  main_ros.cpp  main_rplidar.cpp  registration_icp_ndt.cpp
src/iir1/test/: butterworth.cpp
src/include/: config.h  control.hpp  kalman_fusion.h  lidar_driver.h  main_task.h  ned_2_lat_lon.hpp  registration_abs.hpp  registration_icp_ndt.h
src/integration_in_f/: detrend.c  detrend.h  fft.c  fft.h  ifft.c  ifft.h  ifftshift.c  ifftshift.h  iomega.c  iomega.h  iomega_data.c  iomega_data.h  iomega_emxutil.c  iomega_emxutil.h  iomega_initialize.c  iomega_initialize.h  iomega_rtwutil.c  iomega_rtwutil.h  iomega_terminate.c  iomega_terminate.h  iomega_types.h  ixamax.c  ixamax.h  mldivide.c  mldivide.h  polyfit.c  polyfit.h  polyval.c  polyval.h  qrsolve.c  qrsolve.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h  sliding_integrate_f.c  (+30 more)
src/matlab_lib/: inte_util.cpp  matlab_math.cpp  sliding_integration_in_f.cpp  x.cpp
src/matlab_lib/include/: inte_util.h  matlab_config.h  matlab_math.h  sliding_integration_in_f.h  x.h
yaml/: apm_config.yaml  apm_pluginlists.yaml
